Add verbose option to ssload

--- a/tools/ssload/Makefile
+++ b/tools/ssload/Makefile
@@ -25,8 +25,9 @@ SED:= sed
 # Duplicates are taken care of when using the "$^" automatic variable
 SRCS:= \
 $(SRC_DIR)/ssload.c \
-$(SRC_DIR)/datalink.c \
+$(SRC_DIR)/console.c \
 $(SRC_DIR)/drivers.c \
+$(SRC_DIR)/datalink.c \
 $(SRC_DIR)/usb-cartridge.c
 
 OBJS:= $(addprefix $(STORE_FILES)/,$(SRCS:.c=.o))
