Allow important files to be installed
This heavily simplifies the entire project structure.

--- a/examples/games/dark-blue/Makefile
+++ b/examples/games/dark-blue/Makefile
@@ -1,7 +1,8 @@
 include ../../pre.common.mk
 
 PROJECT:= dark-blue
-OBJECTS+= \
+LIBRARIES:= tga fixmath
+OBJECTS:= \
 	root.romdisk.o \
 	camera.o \
 	cmd_groups.o \
