--- a/examples/simple/dram-cartridge/Makefile
+++ b/examples/simple/dram-cartridge/Makefile
@@ -1,6 +1,6 @@
 include ../../pre.common.mk
 
 PROJECT:= dram-cartridge
-OBJECTS+= dram-cartridge.o
+OBJECTS:= dram-cartridge.o
 
 include ../../post.common.mk
