--- a/examples/simple/romdisk/Makefile
+++ b/examples/simple/romdisk/Makefile
@@ -1,7 +1,17 @@
 include ../../pre.common.mk
 
 PROJECT:= romdisk
-OBJECTS+= root.romdisk.o \
+
+IP_VERSION:= V1.000
+IP_RELEASE_DATE:= 20160101
+IP_AREAS:= JTUBKAEL
+IP_PERIPHERALS:= JAMKST
+IP_TITLE:= ROMDISK
+IP_MASTER_STACK_ADDR:= 0x06100000
+IP_SLAVE_STACK_ADDR:= 0x00000000
+IP_1ST_READ_ADDR:= 0x06004000
+
+OBJECTS:= root.romdisk.o \
 	romdisk.o
 
 include ../../post.common.mk
