Add variables for Makefiles

--- a/examples/games/dark-blue/Makefile
+++ b/examples/games/dark-blue/Makefile
@@ -1,6 +1,16 @@
 include ../../pre.common.mk
 
 PROJECT:= dark-blue
+
+IP_VERSION:= V1.000
+IP_RELEASE_DATE:= 20160101
+IP_AREAS:= JTUBKAEL
+IP_PERIPHERALS:= JAMKST
+IP_TITLE:= Dark Blue
+IP_MASTER_STACK_ADDR:= 0x06100000
+IP_SLAVE_STACK_ADDR:= 0x00000000
+IP_1ST_READ_ADDR:= 0x06004000
+
 LIBRARIES:= tga fixmath
 OBJECTS:= \
 	root.romdisk.o \
@@ -26,6 +36,6 @@ ROMDISK_DEPS:= levels/test.json
 %.json: %.tmx
 	tiled --export-map "Json files (*.json)" $< $@
 	tools/tmx2map
-	rm -f $@
+	$(RM) $@
 
 include ../../post.common.mk
