--- a/examples/simple/line-scroll-screen/Makefile
+++ b/examples/simple/line-scroll-screen/Makefile
@@ -1,6 +1,16 @@
 include ../../pre.common.mk
 
 PROJECT:= line-scroll-screen
+
+IP_VERSION:= V1.000
+IP_RELEASE_DATE:= 20160101
+IP_AREAS:= JTUBKAEL
+IP_PERIPHERALS:= JAMKST
+IP_TITLE:= line-scroll-screen
+IP_MASTER_STACK_ADDR:= 0x06100000
+IP_SLAVE_STACK_ADDR:= 0x00000000
+IP_1ST_READ_ADDR:= 0x06004000
+
 OBJECTS:= lut.o \
 	line-scroll-screen.o
 
