--- a/examples/simple/dram-cartridge/Makefile
+++ b/examples/simple/dram-cartridge/Makefile
@@ -1,4 +1,8 @@
-include ../../pre.common.mk
+ifeq ($(strip $(INSTALL_ROOT)),)
+  $(error Undefined INSTALL_ROOT (install root directory))
+endif
+
+include $(INSTALL_ROOT)/share/yaul/pre.common.mk
 
 PROJECT:= dram-cartridge
 
@@ -13,4 +17,4 @@ IP_1ST_READ_ADDR:= 0x06004000
 
 OBJECTS:= dram-cartridge.o
 
-include ../../post.common.mk
+include $(INSTALL_ROOT)/share/yaul/post.common.mk
