--- a/examples/simple/line-scroll-screen/Makefile
+++ b/examples/simple/line-scroll-screen/Makefile
@@ -1,4 +1,8 @@
-include ../../pre.common.mk
+ifeq ($(strip $(INSTALL_ROOT)),)
+  $(error Undefined INSTALL_ROOT (install root directory))
+endif
+
+include $(INSTALL_ROOT)/share/yaul/pre.common.mk
 
 PROJECT:= line-scroll-screen
 
@@ -14,4 +18,4 @@ IP_1ST_READ_ADDR:= 0x06004000
 OBJECTS:= lut.o \
 	line-scroll-screen.o
 
-include ../../post.common.mk
+include $(INSTALL_ROOT)/share/yaul/post.common.mk
