--- a/yaul.env.in
+++ b/yaul.env.in
@@ -8,16 +8,16 @@
 # Only ABSOLUTE paths are to be used when applicable!
 
 # Path to tool-chain installation directory
-INSTALL_ROOT=$(HOME)/tool-chains/sh-elf
+export INSTALL_ROOT=${HOME}/tool-chains/sh-elf
 
 # Path to where the build is to ba located
-BUILD_ROOT=$(HOME)/work/libyaul
+export BUILD_ROOT=${HOME}/work/libyaul
 
 # Name of build directory
-BUILD=build
+export BUILD=build
 
 # Option: Development cart used:
 #  0: None
 #  1: USB flash cartridge
 #  2: Datel Action Replay cartridge
-HAVE_DEV_CARTRIDGE=1
+export OPTION_DEV_CARTRIDGE=1
