--- a/examples/simple/line-scroll-screen/Makefile
+++ b/examples/simple/line-scroll-screen/Makefile
@@ -10,7 +10,7 @@ IP_VERSION:= V1.000
 IP_RELEASE_DATE:= 20160101
 IP_AREAS:= JTUBKAEL
 IP_PERIPHERALS:= JAMKST
-IP_TITLE:= line-scroll-screen
+IP_TITLE:= VDP2
 IP_MASTER_STACK_ADDR:= 0x06100000
 IP_SLAVE_STACK_ADDR:= 0x00000000
 IP_1ST_READ_ADDR:= 0x06004000
