--- a/libyaul/Makefile
+++ b/libyaul/Makefile
@@ -219,7 +219,9 @@ LIB_SRCS:= \
 	scu/scu_timer_0_set.c \
 	scu/scu_timer_1_mode_clear.c \
 	scu/scu_timer_1_mode_set.c \
-	scu/scu_timer_1_set.c
+	scu/scu_timer_1_set.c \
+	scu/scu_timer_all_disable.c \
+	scu/scu_timer_all_enable.c
 
 INCLUDE_DIRS:= \
 	common \
